syntax = "proto3";

// Import the standard Google Empty message definition
import "google/protobuf/empty.proto"; 

option java_multiple_files = true;
option java_package = "update";
option java_outer_classname = "UpdateGrpcService";

service UpdateService {
  rpc CheckForUpdate (UpdateRequest) returns (UpdateResponse);
  rpc GetCurrentVersion (google.protobuf.Empty) returns (CurrentVersion);
}

message CurrentVersion {
  int32 currentVersion = 1;
}

message UpdateRequest {
  int32 currentVersion = 1;
}

message UpdateResponse {
  int32 latestVersion = 2;
}
